Posted slides for 322, 363, 363PS#14, links to course evaluations, solutions to 363ps#11

--- a/F20/322/322F20DN.HTM
+++ b/F20/322/322F20DN.HTM
@@ -230,13 +230,14 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  <!-- --> Prob. 7.58, AC vs. DC load line, max-min out of follwrs, <b>Ch 8</b> intro.<!--end comment--></td>  
    </TR><!-- Week of 11/22 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R<br></td>
-	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
-	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-	  11/24<!-- --</a><!-- --><br><!-- --<a href=
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
+	  "https://dordt.instructure.com/files/190976454/download?download_frd=1"><!-- -->
+	  11/24<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       11/26<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Tuesday    -->&nbsp;<!--start comment--><!-- --<small><a href="https://www.youtube.com/watch?v=xxxxxxxxxxx">VIDEO</a></small><!-- --> <!--end comment--><br>
+      <!--Tuesday    -->&nbsp;<!--start comment--><!-- --><small><a href="https://www.youtube.com/watch?v=-8TO30oBUIQ">VIDEO</a></small>
+	  <!-- --> 1 + 1 &gt; 2, MOSFET current mirror, boundaries are opportunities<!--end comment--><br>
       <!--Thursday   -->&nbsp;<!--start comment--><font color=grey>No class&mdash;Thanksgiving Day</font><!--end comment--></td>  
    </TR><!-- Week of 11/29 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R<br></td>
