--- a/F20/322/322F20PS.HTM
+++ b/F20/322/322F20PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 11/23/2020 1:45 pm)
+                              >(Last update: 11/24/2020 9:09 pm)
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -110,9 +110,9 @@ PS                                                           <BR>
 		For accreditation purposes and for future      <br>&nbsp;
 		possible improvement of the course, please fill<br>&nbsp;
 		the two course evaluations linked here.        <br>&nbsp;
-		"<a href=""
+		"<a href="https://forms.office.com/Pages/ResponsePage.aspx?id=3DS96wDlzka4725qmUidYklaKcUSBXtBqP45FZFbCQNUNkcxS1JEWTdDMlFFOTUxQ0FSNVZISDQ0SC4u"
 		>Engineering Department's questionaire</a>"       <br>&nbsp;
-		<a href=""
+		<a href="https://dordt.campuslabs.com/courseeval/"
 		>Nationally normed University questionaire</a>"
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
