--- a/F20/363/363F20PS.HTM
+++ b/F20/363/363F20PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 11/23/2020 1:46 pm)
+                               >(Last update: 11/24/2020 9:09 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -83,6 +83,40 @@ PS                                                       </small>
    Problems Assigned             <br><DIV style="font-size: 80%">
    (In Proakis &amp; Salehi unless otherwise noted)    </DIV></B>
 
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top"> 
+14
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        11/24<br>
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        <a href="https://dordt.instructure.com/courses/2899998/assignments/30122347"
+		>12/01</a><br>        
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+        &nbsp;<!--<a href=
+		"https://dordt.instructure.com/files/xxxxxxxxxx/download?download_frd=1"
+		>11/xx</a><br>        
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics:  Angle modulation basics, FM, PM       <br>&nbsp;
+        Read Ch 4 Sec. 4.2, 4.3, 4.4                             <br>&nbsp;
+		                                               <br>&nbsp;
+        Do<DO> 4.4, 4.5, 4.20</DO>                           <br>&nbsp;
+		                                               <br>&nbsp;
+		Note textbook errata in <a href=
+		"https://dfdeboer.github.io/errata/Proakis_Salehi/2nd/P_S_2_ER.HTM#ERR_187"
+		                       >Problem 4.20</a>
+		                                        <br>&nbsp;<small>
+		(This is the last problem set of the semester.)</small><br>&nbsp;
+		- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - <br>
+		Course evaluation:                             <br>&nbsp;
+		For accreditation purposes and for future      <br>&nbsp;
+		possible improvement of the course, please fill<br>&nbsp;
+		the two course evaluations linked here.        <br>&nbsp;
+		"<a href="https://forms.office.com/Pages/ResponsePage.aspx?id=3DS96wDlzka4725qmUidYklaKcUSBXtBqP45FZFbCQNUOVRNNUhDQk80VUMyRExPTDVXTUxEVUZONi4u"
+		>Engineering Department's questionaire</a>"       <br>&nbsp;
+		<a href="https://dordt.campuslabs.com/courseeval/"
+		>Nationally normed University questionaire</a>"
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top"> 
 13
@@ -120,7 +154,7 @@ PS                                                       </small>
         <a href="https://dordt.instructure.com/courses/2899998/assignments/29972933"
 		>11/17</a><br>        
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        &nbsp;<!--<a href=
+        11/18<!--<a href=
 		"https://dordt.instructure.com/files/xxxxxxxxxx/download?download_frd=1"
 		>11/xx</a><br>        
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
@@ -143,9 +177,9 @@ PS                                                       </small>
         <a href="https://dordt.instructure.com/courses/2899998/assignments/29918024"
 		>11/10</a><br>        
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        &nbsp;<!--<a href=
-		"https://dordt.instructure.com/files/xxxxxxxxxx/download?download_frd=1"
-		>11/xx</a><br>        
+        <a href=
+		"https://dordt.instructure.com/files/190992585/download?download_frd=1"
+		>11/12</a><br>        
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics:  SSB, Hilbert Transform, VSB           <br>&nbsp;
 		                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
