--- a/F20/363/363F20PS.HTM
+++ b/F20/363/363F20PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 11/24/2020 9:09 pm)
+                               >(Last update: 11/28/2020 3:42 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -128,9 +128,9 @@ PS                                                       </small>
         <a href="https://dordt.instructure.com/courses/2899998/assignments/30101976"
 		>11/24</a><br>        
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        &nbsp;<!--<a href=
+        11/28<!--<a href=
 		"https://dordt.instructure.com/files/xxxxxxxxxx/download?download_frd=1"
-		>11/xx</a><br>        
+		>11/28</a><br>        
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics:  Angle modulation basics, FM, PM       <br>&nbsp;
         Read Ch 4 Sec. 4.1                             <br>&nbsp;
@@ -156,7 +156,7 @@ PS                                                       </small>
    <!-- Returned -->        </TD><TD align="center" valign="top">
         11/18<!--<a href=
 		"https://dordt.instructure.com/files/xxxxxxxxxx/download?download_frd=1"
-		>11/xx</a><br>        
+		>11/18</a><br>        
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics:  SSB, Hilbert Transform, VSB           <br>&nbsp;
 		                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
