--- a/F20/363/363F20DN.HTM
+++ b/F20/363/363F20DN.HTM
@@ -240,14 +240,14 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Thursday   -->&nbsp;<!--start comment--><font color=grey>No class&mdash;Thanksgiving Day</font><!--end comment--></td>  
    </TR><!-- Week of 11/29 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R<br></td>
-	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
-	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-	  12/01<!-- --</a><!-- --><br><!-- --<a href=
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
+	  "https://dordt.instructure.com/files/191358842/download?download_frd=1"><!-- -->
+	  12/01<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       12/03<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Tuesday    -->&nbsp;<!--start comment--><!-- --<small><a href="https://www.youtube.com/watch?v=xxxxxxxxxxx">VIDEO</a></small>
-	  <!-- --> <!--end comment--><br>
+      <!--Tuesday    -->&nbsp;<!--start comment--><!-- --><small><a href="https://www.youtube.com/watch?v=YENWOrNGU4E">VIDEO</a></small>
+	  <!-- --> FM Threshold, Composite FM (stereo etc.), Color theory, <b>Ch 5</b> intro<!--end comment--><br>
       <!--Thursday   -->&nbsp;<!--start comment--><!-- --<small><a href="https://www.youtube.com/watch?v=xxxxxxxxxxx">VIDEO</a></small>
 	  <!-- --> <!--end comment--></td>  
    </TR><!-- Week of 12/06 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  --><TR>
