Published slides and video for today's EGR 322 class 	modified:   F20/322/322F20DN.HTM

--- a/F20/322/322F20DN.HTM
+++ b/F20/322/322F20DN.HTM
@@ -243,13 +243,14 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">U<br>R<br></td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/191496200/download?download_frd=1"><!-- -->
-	  12/01<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      12/03<!-- --</a><!-- --></td>
+	  12/01<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/191844030/download?download_frd=1"><!-- -->
+      12/03<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Tuesday    -->&nbsp;<!--start comment--><!-- --><small><a href="https://www.youtube.com/watch?v=b_0vP50S8xA">VIDEO</a></small>
 	  <!-- --> Devotional: "boundaries/life", BJT current mirrors, cascode, buffer<!--end comment--><br>
-      <!--Thursday   -->&nbsp;<!--start comment--><!-- --<small><a href="https://www.youtube.com/watch?v=xxxxxxxxxxx">VIDEO</a></small><!-- --> <!--end comment--></td>  
+      <!--Thursday   -->&nbsp;<!--start comment--><!-- --><small><a href="https://www.youtube.com/watch?v=-ZCVJi1PuCw">VIDEO</a></small>
+	  <!-- --> Final exam discussion, cascode as CG amp, applict'ns of CG analysis<!--end comment--></td>  
    </TR><!-- Week of 12/06 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R<br></td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
