Added a hiden link in index.html to temp stuff 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -453,7 +453,11 @@ An archive of the blog site was saved but the site was not put back up. No plan 
 <small>This page last edited on 8/21/2020.</small><BR><br><br>&nbsp;
  
 
-</DIV></TD></TR></TABLE>
+</DIV></TD></TR>
+<div style="visibility:hidden;">
+<a href="https://dfdeboer.github.io/temp/CovenantCRC/Handbell_Choir_Accompaniment.htm">here</a>
+</div>
+</TABLE>
 </BODY>
 </font>
 </HTML>
