Posted 363 solutions to PS#12, PS#13, posted returned date for PS#14

--- a/F20/363/363F20PS.HTM
+++ b/F20/363/363F20PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 11/28/2020 3:42 pm)
+                               >(Last update: 12/05/2020 3:42 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -94,7 +94,7 @@ PS                                                       </small>
         <a href="https://dordt.instructure.com/courses/2899998/assignments/30122347"
 		>12/01</a><br>        
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        &nbsp;<!--<a href=
+        12/05<!--<a href=
 		"https://dordt.instructure.com/files/xxxxxxxxxx/download?download_frd=1"
 		>11/xx</a><br>        
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
@@ -128,8 +128,8 @@ PS                                                       </small>
         <a href="https://dordt.instructure.com/courses/2899998/assignments/30101976"
 		>11/24</a><br>        
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        11/28<!--<a href=
-		"https://dordt.instructure.com/files/xxxxxxxxxx/download?download_frd=1"
+        <a href=
+		"https://dordt.instructure.com/files/192009944/download?download_frd=1"
 		>11/28</a><br>        
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics:  Angle modulation basics, FM, PM       <br>&nbsp;
@@ -154,8 +154,8 @@ PS                                                       </small>
         <a href="https://dordt.instructure.com/courses/2899998/assignments/29972933"
 		>11/17</a><br>        
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        11/18<!--<a href=
-		"https://dordt.instructure.com/files/xxxxxxxxxx/download?download_frd=1"
+        <a href=
+		"https://dordt.instructure.com/files/192009919/download?download_frd=1"
 		>11/18</a><br>        
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics:  SSB, Hilbert Transform, VSB           <br>&nbsp;
