Published EGR 363 PS#14 solutons 	modified:   F20/363/363F20PS.HTM

--- a/F20/363/363F20PS.HTM
+++ b/F20/363/363F20PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 12/05/2020 3:42 pm)
+                               >(Last update: 12/07/2020 1:59 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -94,9 +94,9 @@ PS                                                       </small>
         <a href="https://dordt.instructure.com/courses/2899998/assignments/30122347"
 		>12/01</a><br>        
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        12/05<!--<a href=
-		"https://dordt.instructure.com/files/xxxxxxxxxx/download?download_frd=1"
-		>11/xx</a><br>        
+        <a href=
+		"https://dordt.instructure.com/files/192171560/download?download_frd=1"
+		>12/05</a><br>        
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics:  Angle modulation basics, FM, PM       <br>&nbsp;
         Read Ch 4 Sec. 4.2, 4.3, 4.4                             <br>&nbsp;
