--- a/F20/322/322F20PS.HTM
+++ b/F20/322/322F20PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 11/24/2020 9:09 pm)
+                              >(Last update: 12/07/2020 3:15 pm)
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -126,9 +126,9 @@ PS                                                           <BR>
 		"https://dordt.instructure.com/courses/2899971/assignments/29945733"
 		>11/19</a>
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		&nbsp;<!--<a href=
-        "https://dordt.instructure.com/courses/2899971/assignments/29945733"
-        >11/28</a><br>
+		<a href=
+        "https://dordt.instructure.com/files/192188966/download?download_frd=1"
+        >11/24</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topic: Basics of amplification, small sig models<br>&nbsp;
 		Read: 7.1, 7.2                                 <br>&nbsp;
