--- a/F20/322/322F20PS.HTM
+++ b/F20/322/322F20PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 12/07/2020 3:15 pm)
+                              >(Last update: 12/07/2020 10:54 pm)
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -94,7 +94,7 @@ PS                                                           <BR>
 		"https://dordt.instructure.com/courses/2899971/assignments/30071786"
 		>12/03</a>
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		&nbsp;<!--<a href=
+		12/07<!--<a href=
         "https://dordt.instructure.com/courses/2899971/assignments/29945733"
         >11/28</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
