Edited index just to make the caches update 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -456,6 +456,7 @@ An archive of the blog site was saved but the site was not put back up. No plan 
 </DIV></TD></TR>
 <div style="visibility:hidden;">
 <a href="https://dfdeboer.github.io/temp/CovenantCRC/Handbell_Choir_Accompaniment.htm">here</a>
+<a href="https://dfdeboer.github.io/HoW_S.html">here</a>
 </div>
 </TABLE>
 </BODY>
