Fixed broken links 	modified:   HOW_S/fader.html 	modified:   HOW_S/lexicon_template.html 	modified:   HOW_S/loudness.html

--- a/HOW_S/lexicon_template.html
+++ b/HOW_S/lexicon_template.html
@@ -40,7 +40,7 @@
 <BODY>
 <!-- Banner -->
 <table align="center" BORDER="0" CELLSPACING="0" CELLPADDING="0" WIDTH="590"><tr><td>
-    <a href="../HOW_S.html"><img width="590" height="147" src="HOW_S_Banner.png"></a>
+    <a href="../HoW_S.html"><img width="590" height="147" src="HOW_S_Banner.png"></a>
 	<hr>
 </td></tr>
 <tr><td><br>
@@ -56,7 +56,7 @@ Another paragraph</p><p>
 
 The last paragraph</p><br>
 
-<h1 align="right"><a href=../HOW_S.html>Return to HoW Sound homepage</a></h1><p>
+<h1 align="right"><a href=../HoW_S.html>Return to HoW Sound homepage</a></h1><p>
 		   
 		   
 		 
