--- a/HOW_S/fader.html
+++ b/HOW_S/fader.html
@@ -40,7 +40,7 @@
 <BODY>
 <!-- Banner -->
 <table align="center" BORDER="0" CELLSPACING="0" CELLPADDING="0" WIDTH="590"><tr><td>
-    <a href="../HOW_S.html"><img width="590" height="147" src="HOW_S_Banner.png"></a>
+    <a href="../HoW_S.html"><img width="590" height="147" src="HOW_S_Banner.png"></a>
 	<hr>
 </td></tr>
 <tr><td><br>
@@ -154,7 +154,7 @@ to remove, add, and edit these labels frequently as desired.</p><p>
 
 
 
-<h1 align="right"><a href=../HOW_S.html>Return to HoW Sound homepage</a></h1><p>
+<h1 align="right"><a href=../HoW_S.html>Return to HoW Sound homepage</a></h1><p>
 		   
 		   
 		 
