--- a/F20/363F20.HTM
+++ b/F20/363F20.HTM
@@ -130,6 +130,9 @@ offering of this course <!--
 </small></P> 
 
 </td></tr></table>
+<div style="visibility:hidden;">
+<a href="00_OPEN_THIS_FILE_FIRST_EGR363_ABET _Read_Me.htm">here</a>
+</div>
 </BODY> </HTML>
 
 
