Fixed broken links 	modified:   F20/322/00_OPEN_THIS_FILE_FIRST_EGR322_F20_ABET_Read_Me.htm 	modified:   F20/322F20.HTM 	modified:   F20/363F20.HTM

--- a/F20/322/00_OPEN_THIS_FILE_FIRST_EGR322_F20_ABET_Read_Me.htm
+++ b/F20/322/00_OPEN_THIS_FILE_FIRST_EGR322_F20_ABET_Read_Me.htm
@@ -157,15 +157,15 @@ This course is offered in the fall of Even calendar years.
 <p class="tab1x"><p><b>Syllabus</b>
 
 <p class="tab1x"><a href=
-                 "https://dordt.sharepoint.com/:b:/r/sites/EngineeringPhysicsDepartments/Shared%20Documents/FCAR/2020-21-F%20FCARs/Archived%20Material/EGR363/EGR363-01Syllabus2020F_De_Boer_363F20SY_Intro_to_Communication_Systems.pdf?csf=1&web=1&e=Vrkljg"
+                 "https://dordt.sharepoint.com/:b:/s/EngineeringPhysicsDepartments/Ebpg4T921IlFrl8j7HEiGxABeDVJ2LHRXy-DNK62D7pFJQ?e=dJTYqY"
                  >Course syllabus</a><br><br>
 
-                 Course <a href="https://dfdeboer.github.io/F20/363F20.HTM"
+                 Course <a href="https://dfdeboer.github.io/F20/322F20.HTM"
 				 >public web portal</a> <a title="External site">
                  <img src="https://dfdeboer.github.io/Canvas_common/Ext_Link_12px.gif"
                  ></a> includes homework assignments and more<br>&nbsp; &nbsp; &nbsp; &nbsp; 
 				     (Some links on the public web portal may be dead by now.  <br>&nbsp; &nbsp; &nbsp; &nbsp; 
-					 Some of the files listed below match those possibly-dead links.)<br><br>
+					 Some of the files listed on this page are in lieu of possibly-dead links.)<br><br>
 
 				 Lectures&mdash;<a href=
 				 "https://dfdeboer.github.io/F20/322/322F20DN_Sharepoint_URLs.HTM"
