--- a/F20/322F20.HTM
+++ b/F20/322F20.HTM
@@ -127,6 +127,9 @@ offering of EGR 323 <!--
                                                      </small></P> 
 
 </td></tr></table>
+<div style="visibility:hidden;">
+<a href="./322/00_OPEN_THIS_FILE_FIRST_EGR322_ABET_Read_Me.htm">here</a>
+</div>
 </BODY> </HTML>
 
 
