Fixed a broken link 	modified:   F20/322/00_OPEN_THIS_FILE_FIRST_EGR322_F20_ABET_Read_Me.htm

--- a/F20/322/00_OPEN_THIS_FILE_FIRST_EGR322_F20_ABET_Read_Me.htm
+++ b/F20/322/00_OPEN_THIS_FILE_FIRST_EGR322_F20_ABET_Read_Me.htm
@@ -175,8 +175,8 @@ This course is offered in the fall of Even calendar years.
 
 
 <p class="tab1x"><a href=
-                 "https://dordt.sharepoint.com/:f:/s/EngineeringPhysicsDepartments/Etmdq0uwY5FNtpPlQZZ1qmgBZCbz6nQfIO_ivrH_m6xEgA?e=glORrs"
-                 >All folders and files</a> related to this course can be found from here.<br><br>
+                 "https://dordt.sharepoint.com/:f:/s/EngineeringPhysicsDepartments/EpUwxkbSrFlKnKxmA7B77pkBt6uVcJ43Tb5uDAuplnxmGg?e=vZa6pU"
+                 >All archived folders and files</a> related to this course can be found from here.<br><br>
 						   
 <p align="right"><i>(end of course binder contents)</i>
 				 
