Added a missing link 	modified:   F20/322/00_OPEN_THIS_FILE_FIRST_EGR322_F20_ABET_Read_Me.htm

--- a/F20/322/00_OPEN_THIS_FILE_FIRST_EGR322_F20_ABET_Read_Me.htm
+++ b/F20/322/00_OPEN_THIS_FILE_FIRST_EGR322_F20_ABET_Read_Me.htm
@@ -107,6 +107,7 @@ This course is offered in the fall of Even calendar years.
 						A <a href="https://dordt.sharepoint.com/:u:/s/EngineeringPhysicsDepartments/Ecp8tvn9agdApjrcwC_4xaoBbyk4oXQVUbTnZ9vEfiZ-dw?e=tEnOhK">netlist</a><sup>*</sup> file for Lab 9 to plot the <i>i<sub>D</sub></i> vs. <i>v<sub>DS</sub></i> char. of a TN0606<br> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 						A <a href="https://www.youtube.com/watch?v=dn4bz9mHZok">video tip</a> for Lab 9 on how to set up a cover page and headers.<br>
 					Lab 10 <a href="https://dordt.sharepoint.com/:b:/s/EngineeringPhysicsDepartments/EXzy6ZpYKPhAt-n5Jno_oUYB7ow0olXCcP9gVc1qS67AwQ?e=ZvE1rm">BJT Amplifiers</a><br> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+					    <a href="https://www.youtube.com/watch?v=AC5tPYFcu1I">Introduction to Lab 10</a> on video.<br> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 						A <a href="https://dordt.sharepoint.com/:u:/s/EngineeringPhysicsDepartments/ESecm707VkRDhRgvFoaQ3sEBg4pddIJ2A1thoNXNP_FQTg?e=x7lHDV">netlist</a><sup>*</sup> file for Lab 10 to plot the <i>i<sub>C</sub></i> vs. <i>v<sub>CE</sub></i> char. of a 2N3904<br> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 						A <a href="https://dordt.sharepoint.com/:u:/s/EngineeringPhysicsDepartments/ETdKOeLyDfxFtt-B0V_Fmz8Bx_fZtZ-IWnCyvj4eJceWHg?e=bR9rRW">template netlist</a><sup>*</sup> file for Lab 10<br> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 						<sup>*</sup> <small>To open a netlist file, download, then open with Windows Notepad or<br> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;
