Updated my homepage for the spring semester, 2021 	modified:   CV.HTM 	new file:   S21/323S21.htm 	new file:   S21/SCH_S21.pdf 	modified:   ddb/CRANE.HTM 	modified:   index.html 	new file:   index_F20.html

--- a/CV.HTM
+++ b/CV.HTM
@@ -795,7 +795,7 @@
 <TR>
     <TD WIDTH="570" COLSPAN="3"><DIV>
         <HR>
-        <A HREF = "INDEX.HTM">Back to De Boer's home page</A><BR><BR>
+        <A HREF = "index.html">Back to De Boer's home page</A><BR><BR>
 
          <small>(This page last updated on 8/22/2020)</small></DIV>
     </TD>
