--- a/ddb/CRANE.HTM
+++ b/ddb/CRANE.HTM
@@ -24,12 +24,13 @@ attaching to the hook.  <BR> <BR>
 You can find out more about the Erector Set toy at these links:<BR><BR>
 
 <A HREF = "http://en.wikipedia.org/wiki/Erector_Set" TARGET = "_TOP">Wikipedia article, "Erector Set"</A><BR>
-<A HREF = "http://www.ebohl.com/index.htm" TARGET = _TOP>Ed's Erector Sets</A><BR>            
+<!--<A HREF = "http://www.ebohl.com/index.htm" TARGET = _TOP>Ed's Erector Sets</A><BR>-->           
 <!-- <A HREF = "http://www.pandys.com/" TARGET = "_TOP">Pandy's Collectibles</A><BR> -->
+<A HREF = "https://www.acghs.org/?page_id=68" TARGET = "_TOP">A.C. Gilbert Heritage Society</A><BR>
 <A HREF = "http://www.girdersandgears.com/erector.html" TARGET = "_TOP">Girders and Gears</a><br>
 <BR>
 
-<A HREF = "../index.htm"> Back to Prof. De Boer's home page </A> 
+<A HREF = "./index.html"> Back to Prof. De Boer's home page </A> 
 </BODY> 
 </HTML> 
 
