Fixed some spelling errors on the How_S pages 	modified:   HOW_S/loudness.html 	modified:   HoW_S.html

--- a/HOW_S/loudness.html
+++ b/HOW_S/loudness.html
@@ -82,7 +82,7 @@ is about 101000 Pa.</p><p>
 
 Because our ears respond logarithmically, we usually convert SPL in Pa to a logarithmic 
 scale.  This is called the "decibel sound-pressure level" or "dB-SPL" ("dee, bee, ess,
-pea, el").  Is is twenty times the base-ten logarithm of the the ratio of the sound-pressure 
+pea, el").  It is twenty times the base-ten logarithm of the ratio of the sound-pressure 
 level in pascals divided by 20 &mu;Pa.  The formula for conversion is:<br><br>
 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
 
@@ -127,7 +127,7 @@ breathing in most situations is completely "silent," masked by other sounds.  Or
 might perceive that an empty classroom is just as quiet as the outdoors (far from traffic), 
 even though the dB-SPL levels are far apart.  The power that a sound wave carries is 
 accurately expressed by dB-SPL, but our perception of that can be very different than the 
-db-SPL numbers would predict.<br><br>
+dB-SPL numbers would predict.<br><br>
 
 As another example of loudness vs. dB-SPL, consider that the FCC requires that advertising 
 may not have an average dB-SPL level above that of the normal programming on radio and TV.  
@@ -172,7 +172,7 @@ But at the lower frequency of 55 Hz, (A<sub>1</sub> on a piano&mdash;the lowest 
 a piano) it takes about 100 dB-SPL to achieve the same loudness.  That is a 20 dB 
 difference.  But if the music is now reproduced at 60 phons of loudness, then 440 Hz 
 requires 60 dB-SPL (20 dB-SPL less than the live sound) and 55 Hz requires 90 dB-SPL
-(only 10 db less than the live sound).  Relatively speaking, the low notes in the 
+(only 10 dB less than the live sound).  Relatively speaking, the low notes in the 
 music will have lost 10 phons of loudness in the reproduced music if <i>all</i> frequencies
 are reduced 20 dB-SPL from the live sound level.  Thus hi-fidelity sound systems 
 have bass and treble tone controls so that you may boost the low and high frequencies 
