--- a/HoW_S.html
+++ b/HoW_S.html
@@ -58,18 +58,18 @@ various sources of sound can be changed in many ways.  By imagining different
 ways that the event could sound, one may choose various technical strategies 
 and settings to achieve a pleasing sound.</p><p>
 
-This web page is dediated just to the sound operations of Covenant Church.
+This web page is dedicated just to the sound operations of Covenant Church.
 This is specific to audio and does not include video or lighting.  The audio 
-is further restricted to live-sound reienforcemnt and live audio streaming 
+is further restricted to live-sound reinforcement and live audio streaming 
 and does not include post-production editing and mastering.  
 Feel free to comment, even if you are not a member or sound operator at 
 Covenant Church.  You may address your comments to dfdeboer at the usual
 ending for Google Mail, gmail.com.</p><p>
 
-This web site is orgainized around a the theme of a lexicon of words associated
+This web site is organized around a the theme of a lexicon of words associated
 with live sound reinforcement and streaming audio.  As time passes the author
-of this page will add more sections.  This style of orgainization will hopefully
-allow for easy development of topics that are not necessarilly related, but are
+of this page will add more sections.  This style of organization will hopefully
+allow for easy development of topics that are not necessarily related, but are
 of interest.</p><p>
 
 There are existing Lexicons about audio online, such as the <a 
@@ -80,9 +80,9 @@ are a few words or phrases in greater depth.
 <h1>A Lexicon of Sound</h1><p>
 
 We hear that, "words matter."  With that in mind, here are some definitions.
-Click on a word or phrase to see a definition and perhaps some discusison 
+Click on a word or phrase to see a definition and perhaps some discussion 
 and examples to demonstrate the word or phrase, or maybe some links to other
-web pages or videos that are relevent.  Click on any page's top banner, 
+web pages or videos that are relevant.  Click on any page's top banner, 
 "HoW Sound," to return to this homepage at any time.</p><p>
 
 &nbsp; &nbsp; <i>Words and Phrases related to sound</i><br>
