published EGR 323 public web portal, also fixed broken links in EGR363 F20 FCAR READ_ME_FIRST file 	modified:   F20/322/PSPICE.htm 	modified:   F20/322F20.HTM 	modified:   F20/363/00_OPEN_THIS_FILE_FIRST_EGR363_ABET_Read_Me.htm 	new file:   S21/323/323S21PS.HTM 	new file:   S21/323/DeBoer_2016_135x165.jpg 	new file:   S21/323/PSPICE.htm 	new file:   S21/323/PSpice_logo.gif 	new file:   S21/323/PSpice_remote_server_logo.png 	new file:   S21/323/Sedra_Smith_8th_Cover_120x150.jpg 	new file:   S21/323S21_.HTM

--- a/F20/363/00_OPEN_THIS_FILE_FIRST_EGR363_ABET_Read_Me.htm
+++ b/F20/363/00_OPEN_THIS_FILE_FIRST_EGR363_ABET_Read_Me.htm
@@ -57,11 +57,11 @@ Re-open it from your local hard drive.  Usually the links will then work.
    <p class="tab2x"><a href="https://dordt.sharepoint.com/:w:/s/EngineeringPhysicsDepartments/ET0RA6E4swxKvKpZiIKv3dQB_KEhm8jDZyamSe7FZwO72g?e=19aOaO">Fall, 2020</a><br>
 
 <p class="tab1x">Previous Process
-   <p class="tab2x"><a href=".\FCARs\Current Process\16S - EGR363 - FCAR - DDB.docx">Spring, 2016</a> (broken link)<br>
+   <p class="tab2x"><a href="https://dordt.sharepoint.com/:w:/s/EngineeringPhysicsDepartments/ETAmQoqHRVRUiKwjhnSlFzkBsCY6lAKTjOtzedCzlMKVbw?e=GVJTvv">Spring, 2016</a><br>
 
 <p class="tab1x">Previous Previous Process
-   <p class="tab2x"><a href=".\FCARs\Previous Process\FCAR_363_S14_De_Boer.pdf">Spring, 2014</a> (broken link)</br>
-                    <a href=".\FCARs\Previous Process\FCAR_363_S12_De_Boer.pdf">Spring, 2012</a> (broken link)</p>
+   <p class="tab2x"><a href="https://dordt.sharepoint.com/:w:/s/EngineeringPhysicsDepartments/EQKegdypIJZXkPsANy8qDykBiTdV08SgDzzl6aQJ4ekx5g?e=PpV1wj">Spring, 2014</a></br>
+                    <a href="https://dordt.sharepoint.com/:w:/s/EngineeringPhysicsDepartments/EQKegdypIJZXkPsANy8qDykBiTdV08SgDzzl6aQJ4ekx5g?e=PpV1wj">Spring, 2012</a></p>
 					
 <b>Outcomes Mapping</b>&mdash;<a href="https://dordt.sharepoint.com/:x:/s/EngineeringPhysicsDepartments/EQDEUrxyQJZMlSEpaomWWZMBnRpnHRVYzUNEOn8EhfThaA?e=K6dKgR">COAS file valid for Fall 2020</a></p><p>
 
