--- a/S21/323/PSPICE.htm
+++ b/S21/323/PSPICE.htm
@@ -37,7 +37,7 @@ TABLE {
                                                              <BR>
       INSTRUCTIONS FOR REMOTE ACCESS TO PSpice               <BR></b>
 	  (No installation required--runs via your Web browser)<br><b>
-                  (Fall 2020)                            </B></P>
+                  (Spring 2021)                            </B></P>
 <A HREF=
 "https://remoteapp.dordt.edu//RDWeb/Pages/rdp/cpub-pspice-DU_Remote_Apps-CmsRdsh.rdp"
 target="blank_">
@@ -76,7 +76,7 @@ you do, you have made a mistake.)  </p><br><br><br>
                                                              <BR>
           INSTRUCTIONS FOR DOWNLOADING PSpice                <BR></b>
   (Will take several GB on your personal computer's drive.)          <br><b>
-                  (Fall 2020)                            </B></P>
+                  (Spring 2021)                            </B></P>
 <A HREF=
 "https://www.orcad.com/orcad-academic-program"
 target="blank_">
@@ -120,7 +120,7 @@ hard drive.</p><p>
 read more about SPICE <a href="http://bwrc.eecs.berkeley.edu/classes/IcBook/SPICE/"
 >here</a> and <a href="http://en.wikipedia.org/wiki/SPICE"
 >here</a>.  Practically all commands and features of spice are 
-supported in the A/D version of PSpice that we use here at 
+supported in the A/D Lite version of PSpice that we use here at 
 Dordt University.  <b>Thus documentation for SPICE can be used with 
 and applied to PSpice.</b></p><p>
 
