--- a/S21/323S21_.HTM
+++ b/S21/323S21_.HTM
@@ -1,7 +1,7 @@
 <HTML>
 <HEAD>
 <link rel="shortcut icon" href="../favicon.ico">
-<TITLE>EGR 322 Public Portal</TITLE>
+<TITLE>EGR 323 Public Portal</TITLE>
 <style type="text/css">
 A:link {
    color:#CC9900; 
@@ -33,19 +33,19 @@ TABLE {
                                                  <A target="_top"
                         HREF="../redirect/Dordt_Engineering.htm">
 
-            Dordt University Engineering Department</A>         <BR>
+            Dordt University Engineering Department</A>      <BR>
                                                              <BR>
-                      ELECTRONICS I, EGR 322                 <BR>
-                          (Fall 2020)                    </B></P>
+                     ELECTRONICS II, EGR 323                 <BR>
+                         (Spring 2021)                   </B></P>
                                                </td></tr></table>
-                      <table align="center", width=420 border="0">
+                     <table align="center", width=420 border="0">
                                                              <tr>
 <td style="text-align: center;" valign="bottom" width=140>
 <A target="_top" HREF=
 "https://oup-arc.com/access/sedra8e-student-resources"
 ><img width="120" height="150"  
 alt="'click'-->to publisher's web page" hspace="0" 
-src="322/Sedra_Smith_8th_Cover_120x150.jpg" 
+src="323/Sedra_Smith_8th_Cover_120x150.jpg" 
 border="0"></A><br>
 <a target="_top" href=
 "https://oup-arc.com/access/sedra8e-student-resources"
@@ -55,7 +55,7 @@ border="0"></A><br>
 <A target="_top" HREF="../index.html">
 <img width="135" height="165" 
 alt="'click'-->to De Boer's homepage" hspace="0" 
-src="322/DeBoer_2016_135x165.jpg" 
+src="323/DeBoer_2016_135x165.jpg" 
 border="0"></A><br>
 <A target="_top" HREF="../index.html">
 <b>Prof. De Boer</b></a><br>
@@ -64,27 +64,27 @@ Office Phone: 712-722-6245<br>
 
 <td style="text-align: center;" valign="bottom" width=140>
 <A target="_top" HREF=
-"322/PSPICE.htm">
+"323/PSPICE.htm">
 <img width="140" height="148" 
 alt="'click'-->to PSpice page" hspace="0" 
-src="322/PSpice_logo.gif" 
+src="323/PSpice_logo.gif" 
 border="0"></A><br>
 <A target="_top" HREF=
-"322/PSPICE.htm">
+"323/PSPICE.htm">
 <b>Lab Software</b></a></td>
 
                                                     </tr></table>
                    <table align="center", width="420"><tr><td><br>
 
                   <P style="text-align: center;"><A target="_top" 
-   HREF="322/322F20PS.HTM"
+   HREF="323/323S21PS.HTM"
                      >Homework Assignments</A>           <br><br>
        All course work must conform to these <A target="_top" 
 	      HREF="../integrity.htm"
                                       >standards</A>.    <BR></P> 
 
             <P style="text-align: center;"><A target="_top" HREF= 
-	    "322/EGR322_01Syllabus2020F_De_Boer_322F20SY_Electronics_I.pdf"
+	    "323/EGR323_01Syllabus2020F_De_Boer_323S21SY_Electronics_I.pdf"
                      >Course Syllabus</A>                    <br>
         Includes course catalog description,                 <br> 
           textbook information, grade weights, etc.           </P> 
@@ -100,7 +100,7 @@ border="0"></A><br>
                            <p style="text-align: center";><small>
 (The information in this frame is available outside of 
 Canvas@Dordt on the World Wide Web via the <a href=
-"https://dfdeboer.github.io/F18/322F18.HTM"  
+"https://dfdeboer.github.io/F18/323F18.HTM"  
 >public web portal</a> to this course).              </small></p>
 -----UNCOMMENT FOR INSTRUCTURE------------------------------ -->
 <!-- INSTRUCTURE STOP CUT HERE  -->   
@@ -108,27 +108,27 @@ Canvas@Dordt on the World Wide Web via the <a href=
                                     <P style="text-align: center;"><BR><small>
 The main portal to this course for students is via 
                                                  <A target="_top" 
-           HREF="https://dordt.instructure.com/courses/2899971"
+           HREF="https://dordt.instructure.com/courses/3110075"
                                            >Canvas@Dordt</A><BR>
 The Canvas@Dordt portal provides everything in this frame and more.
 <!-- You may <a
    href="http://homepages.dordt.edu/~ddeboer/cd_common/GUEST.HTM"
             >request guest access</a> to Canvas@Dordt) --><br><br>
-<a href="../F18/322F18.HTM">
-<img src="../PREVIOUS.GIF" ALT="PREVIOUS" border="0"></a>
-offering of this course <!--  
-<a href="../F18/220F18.HTM"> 
-<img src="../NEXT.GIF" ALT="NEXT" border="0"> --><br>
 <a href="../S19/323S19.HTM">
 <img src="../PREVIOUS.GIF" ALT="PREVIOUS" border="0"></a>
-offering of EGR 323 
-<a href="../S21/323S21.HTM"> 
-<img src="../NEXT.GIF" ALT="NEXT" border="0">
+offering of this course <!--  
+<a href="../S19/222F18.HTM"> 
+<img src="../NEXT.GIF" ALT="NEXT" border="0"> --><br>
+<a href="../F20/322F20.HTM">
+<img src="../PREVIOUS.GIF" ALT="PREVIOUS" border="0"></a>
+offering of EGR 322 <!-- 
+<a href="../S19/323S19.HTM"> 
+<img src="../NEXT.GIF" ALT="NEXT" border="0">-->
                                                      </small></P> 
 
 </td></tr></table>
 <div style="visibility:hidden;">
-<a href="./322/00_OPEN_THIS_FILE_FIRST_EGR322_F20_ABET_Read_Me.htm">here</a>
+<a href="./323/00_OPEN_THIS_FILE_FIRST_EGR323_S21_ABET_Read_Me.htm">here</a>
 </div>
 </BODY> </HTML>
 
