Archived grading curves for final exams, F20 in EGR 322 and EGR 363 	modified:   F20/322/00_OPEN_THIS_FILE_FIRST_EGR322_F20_ABET_Read_Me.htm 	modified:   F20/363/00_OPEN_THIS_FILE_FIRST_EGR363_ABET_Read_Me.htm

--- a/F20/322/00_OPEN_THIS_FILE_FIRST_EGR322_F20_ABET_Read_Me.htm
+++ b/F20/322/00_OPEN_THIS_FILE_FIRST_EGR322_F20_ABET_Read_Me.htm
@@ -87,7 +87,7 @@ This course is offered in the fall of Even calendar years.
                                   <a href="https://dordt.sharepoint.com/:b:/s/EngineeringPhysicsDepartments/EV_kQjMwp1lOkZLTRrBliiABohwOYeZ33MHRfqN3ouRjQA?e=402zEs">Average Score</a>,
                                   <a href="https://dordt.sharepoint.com/:b:/s/EngineeringPhysicsDepartments/EWjYk0sZ6d5HhUCI6-IX2QIBUhlHJ1Eskg431WSCy1u0uA?e=1f95R9">Lowest Score</a><br>
 					<a href="https://dordt.sharepoint.com/:b:/s/EngineeringPhysicsDepartments/EXLZ_MxYLZxBrCc1qVoSmdoB-B1CUMM8Q7lv5qxgLfcLwg?e=ZFWZSA">Solution key</a><br>
-					<a href="https://dordt.sharepoint.com/:b:/s/EngineeringPhysicsDepartments/XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXxxxxxxxxxxxxxxxxxxx">Grading curve and rubric</a> (Not archived yet)<br>
+					<a href="https://dordt.sharepoint.com/:b:/s/EngineeringPhysicsDepartments/Ecr7E4jS97NBjsRwEcOz5OwB1a4LWU1BVxRDcdLrt-gD_w?e=epa7J2">Grading curve and rubric</a><br>
 					<a href="https://dordt.sharepoint.com/:f:/s/EngineeringPhysicsDepartments/Errjfp_1bZ1IoovMWZ34DUYBgcYfFNdkG2GtUeo5hskWLA?e=9ZJcvm">Folder co`ntaining a copy of each graded Final Exam</a><br>
 					
 <p class="tab1x">Laboratory
