--- a/F20/363/00_OPEN_THIS_FILE_FIRST_EGR363_ABET_Read_Me.htm
+++ b/F20/363/00_OPEN_THIS_FILE_FIRST_EGR363_ABET_Read_Me.htm
@@ -85,7 +85,7 @@ Re-open it from your local hard drive.  Usually the links will then work.
                                   <a href="https://dordt.sharepoint.com/:b:/s/EngineeringPhysicsDepartments/EaTwmMVThX1AkP51d-YR_YYB1ktDM4xvlyaUiILroUxLlg?e=F8bKqF">Average Score</a>,
                                   <a href="https://dordt.sharepoint.com/:b:/s/EngineeringPhysicsDepartments/EZjS_lD3-qdGia1eHlbPECkB-44omJywsjGEnagYanrJqw?e=6DgaZe">Lowest Score</a><br>
 					<a href="https://dordt.sharepoint.com/:b:/s/EngineeringPhysicsDepartments/Eaeca8b_XIpFkHR5o--N-P4Bh5QKzemjdUf7wtuERcuBLg?e=uhmmIa">Solution key</a><br>
-					<a href="https://dordt.sharepoint.com/:b:/s/EngineeringPhysicsDepartments/XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXxxxxxxxxxxxxxxxxxxx">Grading curve and rubric</a> (Not archived yet)<br>
+					<a href="https://dordt.sharepoint.com/:b:/s/EngineeringPhysicsDepartments/ERCKk7QTL9lBqPcpv2tWwH4BILe77vwU0Nnoj0QdgGzbTA?e=g8dBNM">Grading curve and rubric</a><br>
 					<a href="https://dordt.sharepoint.com/:f:/s/EngineeringPhysicsDepartments/En02xEf9leNPmOz1oP_53WsBW1OgnK5x7gHoixcS4Y-Fwg?e=bnoT95">Folder containing a copy of each graded Final Exam</a><br>
 					
 <p class="tab1x">Homework
