Published the page on gain structure in HoW_Sound

--- a/HoW_S.html
+++ b/HoW_S.html
@@ -86,7 +86,8 @@ web pages or videos that are relevant.  Click on any page's top banner,
 "HoW Sound," to return to this homepage at any time.</p><p>
 
 &nbsp; &nbsp; <i>Words and Phrases related to sound</i><br>
-<a href="HOW_S/loudness.html">Loudness</a><!--
+<a href="HOW_S/loudness.html">Loudness</a><br>
+<!--
 Frequency,
 Frequency Response,
 Pitch,
@@ -96,7 +97,9 @@ Spectral content,
 
 <br><br>&nbsp; &nbsp; <i>Words and Phrases related to features of a mixer board or other equipment</i><br>
 
-<a href="HOW_S/fader.html">Fader</a><!--
+<a href="HOW_S/fader.html">Fader</a><br>
+<a href="HOW_S/gain.html">Gain Structure</a><br>
+<!--
 XLR,
 TRS,
 TS,
